--- a/docker/nginx-ssl.conf
+++ b/docker/nginx-ssl.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name idsg.site www.idsg.site;
+    server_name your-domain.com www.your-domain.com;
     
     # Let's Encrypt验证路径
     location /.well-known/acme-challenge/ {
@@ -15,11 +15,11 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name idsg.site www.idsg.site;
+    server_name your-domain.com www.your-domain.com;
     
     # SSL证书配置
-    ssl_certificate /etc/letsencrypt/live/idsg.site/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/idsg.site/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
     
     # SSL安全配置
     ssl_protocols TLSv1.2 TLSv1.3;
