feat(nginx): 添加Let's Encrypt验证路径代理配置
添加对/.well-known/acme-challenge/路径的代理配置，将其转发到本地9090端口以支持Let's Encrypt证书验证

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -31,6 +31,15 @@ server {
         add_header Expires 0;
     }
 
+    # Let's Encrypt 验证路径代理到9090端口
+    location /.well-known/acme-challenge/ {
+        proxy_pass http://localhost:9090;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # 主应用路由 - 所有请求转发到 index.html
     location / {
         try_files $uri $uri/ /index.html;
