chore: 将apiProvider从brave更改为baidu
更新API提供商配置以使用百度服务

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -2,7 +2,7 @@
   "keywords": "设计,科技",
   "updateTime": "09:00",
   "apiKey": "BSAmIRIor23KpD9QrmjjvUTTVD7JlXy",
-  "apiProvider": "brave",
+  "apiProvider": "baidu",
   "storageType": "sqlite",
   "maxResults": 20,
   "dbPath": "../public/news.db",
