--- a/scripts/settings.juhe.json
+++ b/scripts/settings.juhe.json
@@ -1,5 +1,5 @@
 {
-  "keywords": "设计,科技",
+  "keywords": "设计,科技,人工智能,AI",
   "updateTime": "09:00",
   "apiKey": "3860e3a773a3fcf45a2fe5361a542d44",
   "apiProvider": "juhe",
