--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - ./data:/app/public
       # 持久化日志文件
       - ./logs:/app/logs
+      # 挂载脚本目录，支持配置文件热更新
+      - ./scripts:/app/scripts
       # 可选：自定义配置文件
       - ./docker/default.conf:/etc/nginx/conf.d/default.conf:ro
     environment:
