docs(scripts): 更新设置文件中的关键词列表
将关键词从"设计,科技"更新为"AI, AI硬件, 人工智能"，以更好地反映当前关注领域

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,5 +1,5 @@
 {
-  "keywords": "设计,科技",
+  "keywords": "AI, AI硬件, 人工智能",
   "updateTime": "09:00",
   "apiKey": "3860e3a773a3fcf45a2fe5361a542d44",
   "apiProvider": "juhe",
