feat(newsapi): 添加NewsAPI.org支持并更新相关文档
- 在news_scraper.py中新增NewsAPI.org的搜索实现
- 更新settings.json配置，切换默认API提供商为newsapi
- 添加NEWSAPI_SETUP.md详细配置指南
- 修改文件权限为可执行
```

这个提交消息：
1. 使用feat类型，因为这是新增功能
2. 添加了scope(newsapi)明确修改范围
3. 简要说明了主要变更内容
4. 在body中列出了4个关键修改点，按重要性排序
5. 符合50字符限制和中文语言要求
6. 避免了重复信息，每个点都是独立且有价值的补充信息

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,8 +1,8 @@
 {
-  "keywords": "AI, AI硬件, 人工智能",
+  "keywords": "artificial intelligence,AI hardware",
   "updateTime": "09:00",
-  "apiKey": "3860e3a773a3fcf45a2fe5361a542d44",
-  "apiProvider": "juhe",
+  "apiKey": "b82fef9f712145c09fc6e6e8b2839442",
+  "apiProvider": "newsapi",
   "storageType": "sqlite",
   "maxResults": 20,
   "dbPath": "../public/news.db",
