feat: 更新新闻抓取系统配置和功能
- 将HTTP端口从80改为8090以避免冲突
- 更新ZHIPU API配置和关键词为中文
- 使用虚拟环境运行Python脚本提高隔离性
- 改进智谱清言AI的新闻搜索功能，使用新版API
- 删除不再需要的.env.example文件

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,8 +1,8 @@
 {
-  "keywords": "artificial intelligence,AI hardware",
+  "keywords": "人工智能",
   "updateTime": "09:00",
-  "apiKey": "b82fef9f712145c09fc6e6e8b2839442",
-  "apiProvider": "newsapi",
+  "apiKey": "90d86d49380f467ab3b803ce8b51a71f.5XQlmPh55Y0cDmfp",
+  "apiProvider": "zhipu",
   "storageType": "sqlite",
   "maxResults": 20,
   "dbPath": "../public/news.db",
