feat(news_scraper): 改进新闻抓取逻辑并添加图片处理功能
- 移除模拟数据返回，改为空数组
- 改进AI生成新闻的提示词，要求更时效性的内容
- 添加图片处理功能，使用Unsplash图片替换不可靠链接
- 新增_get_relevant_images方法根据关键词获取相关图片
- 更新settings.json配置

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,5 +1,5 @@
 {
-  "keywords": "人工智能",
+  "keywords": "\u6d4b\u8bd5\u7a7a\u5bc6\u94a5",
   "updateTime": "09:00",
   "apiKey": "90d86d49380f467ab3b803ce8b51a71f.5XQlmPh55Y0cDmfp",
   "apiProvider": "zhipu",
