chore: 更新SSL配置的域名和邮箱信息
修改.env.ssl文件中的DOMAIN和EMAIL为实际值
简化docker-compose.ssl.yml中的certbot命令格式

--- a/.env.ssl
+++ b/.env.ssl
@@ -6,10 +6,10 @@
 # ===========================================
 
 # 您的域名 (必须修改)
-DOMAIN=your-domain.com
+DOMAIN=news.idsg.site
 
 # 您的邮箱地址，用于Let's Encrypt通知 (必须修改)
-EMAIL=your-email@example.com
+EMAIL=zhiwehu@gmail.com
 
 # 是否启用SSL
 ENABLE_SSL=true
