--- a/docker-compose.ssl.yml
+++ b/docker-compose.ssl.yml
@@ -58,22 +58,15 @@ services:
       - DOMAIN=${DOMAIN:-your-domain.com}
       - EMAIL=${EMAIL:-your-email@example.com}
     # 初始获取证书的命令
+    entrypoint: ["/bin/sh", "-c"]
     command: >
-      sh -c '
-        if [ ! -f /etc/letsencrypt/live/$${DOMAIN}/fullchain.pem ]; then
-          echo "获取新的SSL证书..."
-          certbot certonly 
-            --webroot 
-            --webroot-path=/var/www/certbot 
-            --email $${EMAIL} 
-            --agree-tos 
-            --no-eff-email 
-            --staging 
-            -d $${DOMAIN} 
-            -d www.$${DOMAIN}
-        else
-          echo "SSL证书已存在，跳过获取步骤"
-        fi
+      '
+      if [ ! -f /etc/letsencrypt/live/$$DOMAIN/fullchain.pem ]; then
+        echo "获取新的SSL证书..."
+        certbot certonly --webroot --webroot-path=/var/www/certbot --email $$EMAIL --agree-tos --no-eff-email --staging -d $$DOMAIN -d www.$$DOMAIN
+      else
+        echo "SSL证书已存在，跳过获取步骤"
+      fi
       '
     networks:
       - idsgnews-network
